# FatPy

./: .actrc  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  requirements-dev.txt  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_improvement.md  feature_request.md  performance_issue.md  planned_implementation.md  question.md
.github/workflows/: coverage.yml  publish_pypi.yml  python-ci.yml
api/: index.html
contact/: index.html
development/: index.html
development/ci_cd/: index.html
development/code_of_conduct/: index.html
development/code_style/: index.html
development/contributing/: index.html
development/documentation/: index.html
development/install/: index.html
development/testing/: index.html
docs/: ARCHITECTURE copy.md  ARCHITECTURE.md  ARCHITECTURE_GRAPH.md  CI_CD.md  FAQ.md  INSTALL.md  SECURITY.md  SUPPORT.md  TROUBLESHOOTING.md  USAGE.md  contact.md  faber_cost.md  index.md
docs/api/: examples.md  index.md  utilities.md
docs/api/core/: energy_life.md  strain_life.md  stress_life.md
docs/development/: ci_cd.md  code_style.md  documentation.md  index.md  install.md  license.md  testing.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
docs/theory/: index.md
faber_cost/: index.html
license/: index.html
overrides/: main.html
requirements/: requirements-dev.txt
search/: search_index.json
src/fatpy/: __init__.py  module1.py
src/fatpy/core/: __init__.py
src/fatpy/core/damage_cumulation/: __init__.py  methods.py
src/fatpy/core/decompositions/: __init__.py  uniaxial.py
src/fatpy/core/decompositions/multiaxial/: __init__.py  load_path_analysis_5d.py  methods.py  shear_path_analysis_2d.py
src/fatpy/core/energy_life/: __init__.py  base_methods.py  correction_methods.py  decompositions.py  demage_parameters.py
src/fatpy/core/plane_based_methods/: __init__.py  methods.py  plane_search.py
src/fatpy/core/strain_life/: __init__.py  base_methods.py  correction_methods.py  decompositions.py  demage_parameters.py
src/fatpy/core/strain_life/correction_methods/: __init__.py  elastic_plastic_conversion.py  mean_stress_effect.py
src/fatpy/core/strain_life/damage_params/: __init__.py  fkm_nonlin.py  multiaxial.py  uniaxial.py
src/fatpy/core/stress_life/: __init__.py  base_methods.py  correction_methods.py  decompositions.py  demage_parameters.py
src/fatpy/core/stress_life/correction_methods/: __init__.py  eq_stress_at_crit_dist.py  fatigue_limit.py  power_law.py
src/fatpy/core/stress_life/damage_params/: __init__.py  multiaxial.py  s_eqa_goodman.py  uniaxial.py  uniaxial_stress_eq_amp.py
src/fatpy/data_parsing/: __init__.py  fe_model.py  loads.py  material.py  stress_tensor.py  user_input.py
src/fatpy/examples/: __init__.py  docstring_example_tmp.py
src/fatpy/material_laws/: __init__.py  cyclic_stress_strain_curve.py  en_curve.py  hookes_law.py  regression_analysis.py  sn_curve.py
src/fatpy/struct_mech/: __init__.py  strain.py  stress.py  transformations.py
src/fatpy/structural_mechanics/: __init__.py  eq_stresses.py  transformations.py
src/fatpy/utilities/structural_mechanics/: equistress.py
src/fatpy/utils/: __init__.py  mesh.py  post_processing.py  pre_processing.py  signal.py  transformation.py  voigt.py
stylesheets/: extra.css
tests/: conftest.py  test_stress_tensor.py
tests/core/stress_life/damage_params/: test_iniaxial_stress_eq_amp.py
tests/material_laws/: test_sn_curve.py
tests/stress_life/: test_dam_params.py  test_s_eqa_goodman.py
tests/struct_mech/: test_strain.py  test_stress.py
tests/utilities/structural_mechanics/: equistress.py
tests/utils/: test_voigt.py
theory/: index.html
theory/energy_life/: index.html
theory/strain_life/: index.html
theory/stress_life/: index.html
