[project]
name = "FatPy"
dynamic = ["version"]
description = "Python implementations of various fatigue life algorithms"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Jan Vyborny", email = "jan.vyborny2@gmail.com" }]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    # "scipy>=1.15.1",
]

[project.urls]
"Homepage" = "https://github.com/vybornak2/FatPy"
"Bug Tracker" = "https://github.com/vybornak2/FatPy/issues"
"Documentation" = "https://vybornak2.github.io/FatPy/"
"FABER" = "https://faber-cost.eu/"
"LinkedIn" = "https://www.linkedin.com/company/faber-cost/about/"

[tool.uv]
dev-dependencies = [
    "mypy>=1.18.2",
    "ruff>=0.13.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-mypy>=1.0.1",
    "pytest-ruff>=0.5",
    "mkdocs>=1.6.1",
    "mkdocs-material[imaging]>=9.6.20",
    "mkdocstrings[python]>=0.30.1",
    "mkdocs-autorefs>=1.4.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
minversion = "6.0"
addopts = [
    "-rfEP",  # show failures, errors, and passed with output
    "-vv",    # verbose output
    "--ruff", # run ruff on all tests
    "--mypy", # run mypy on all tests
    # "--no-header",                                    # do not show header
    # "-s",                                             # do not capture output

    # "--pdb",                                          # enter python debugger on failure
    # "--pdbcls=IPython.terminal.debugger:TerminalPdb", # use IPython debugger
    # "--log-level=DEBUG",                              # set log level to DEBUG

    # "-k", "pattern",                                  # run only tests matching this pattern
    # "tests/test_mod.py::TestClass::test_method",      # run only this test
    # "-m", "mark",                                     # run only tests with this mark
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "F", # pyflakes
    "D", # pydocstyle
    "B", # bugbear
    "S", # bandit
]
ignore = []
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"tests/**" = [
    "D", # pydocstyle
    "B", # bugbear
    "S", # bandit
]

[tool.mypy]
python_version = "3.12"
files = "src"
strict = true
check_untyped_defs = true
disallow_subclassing_any = true
warn_unreachable = true
warn_unused_configs = true
show_error_context = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = ["tests", "tests.*"]
disallow_untyped_decorators = false

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/fatpy/_version.py"
fallback_version = "0.0.1"
